# pollocad-neo

./: .gitignore  .gitmodules  CMakeLists.txt  CodeEditor.qml  Main.qml  README.md  main.cpp  occtview.cpp  occtview.h
core/: CMakeLists.txt  Chicken_by_MartinSivecky_892445.stl  ast.cpp  ast.h  builtins_shapes.cpp  builtins_values.cpp  contexts.cpp  contexts.h  executor.cpp  executor.h  executorresult.cpp  executorresult.h  lexy_span.h  logmessage.h  parser.cpp  parser.h  value.cpp  value.h
core/builtins/: chamfer_fillet.cpp  helpers.cpp  helpers.h  make_2d.cpp  make_3d.cpp  primitive_shapes.cpp  primitives.cpp  shape_manipulation.cpp
gui/: CMakeLists.txt
gui/qml/: CodeEditor.qml  Main.qml
gui/src/: backgroundexecutor.cpp  backgroundexecutor.h  codedecorator.cpp  codedecorator.h  main.cpp  occtview.cpp  occtview.h  spanobj.h
tests/: CMakeLists.txt  helpers.h  tst_executortest.cpp  tst_parsertest.cpp
